--- a/html/skins/alteeve/media-library.html
+++ b/html/skins/alteeve/media-library.html
@@ -114,11 +114,11 @@
 <!-- end save-to-disk-header -->
 
 <!-- start save-to-disk-no-file -->
-	</tr>
 	<tr>
+		<td class="highlight_warning_bold">
+			#!string!title_0124!#<br />
+		</td>
 		<td>
-			<br />
-			<span class="highlight_warning_bold">#!string!title_0124!#</span><br />
 			<br />
 			#!string!message_0297!#<br />
 			#!string!message_0298!#<br />
