--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -135,31 +135,41 @@
 	</tr>
 <!-- end new-anvil-install-be-patient-message -->
 
-<!-- start new-anvil-install-start-update-node1 -->
+<!-- start new-anvil-install-start-network-config -->
+</table>
+<br />
+<table>
 	<tr>
-		<td class="highlight_ready_bold" rowspan="2">
-			#!string!row_0227!#
-		</td>
-		<td class="code">
-			<!-- The progress dots are printed directly -->
-<!-- end new-anvil-install-start-update-node1 -->
-
-<!-- start new-anvil-install-start-update-node2 -->
-		</td>
-		<td class="code">
-			<!-- The progress dots are printed directly -->
-<!-- end new-anvil-install-start-update-node2 -->
-
-<!-- start new-anvil-install-start-update-done -->
-			</span>
+		<td class="highlight_ready_bold">
+			#!string!title_0174!#
 		</td>
 	</tr>
 	<tr>
-		<td class="#!replace!node1_class!#">
-			#!replace!node1_message!#
-		</td>
-		<td class="#!replace!node2_class!#">
-			#!replace!node2_message!#
+		<td>
+<!-- end new-anvil-install-start-network-config -->
+
+<!-- start new-anvil-install-network-config-node2 -->
 		</td>
 	</tr>
-<!-- end new-anvil-install-start-update-done -->
+	<tr>
+		<td class="highlight_ready_bold">
+			#!string!title_0175!#
+		</td>
+	</tr>
+	<tr>
+		<td>
+<!-- end new-anvil-install-network-config-node2 -->
+
+
+<!-- start new-anvil-install-end-network-config -->
+		</td>
+	</tr>
+</table>
+<br />
+<table>
+	<tr>
+		<td colspan="3" class="highlight_ready_bold">
+			#!string!title_0176!#
+		</td>
+	</tr>
+<!-- end new-anvil-install-end-network-config -->
