This is a pretty major milestone in the Install Manifest function... The anvil-configure-network tool has been updated to support a "script" mode, which prints keyed strings that the caller can take and parse into the user's desired language. The web interface now does this parsing and translation. Further, the web interface is now interactive (if in an admittedly clumbsy way). The user will be prompted in real time to unplug and plug back in links in order to map a new nodes physical network interfaces to logical device name.
Still much to do before the next release!

Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -134,3 +134,42 @@
 		</td>
 	</tr>
 <!-- end new-anvil-install-be-patient-message -->
+
+<!-- start new-anvil-install-start-network-config -->
+</table>
+<br />
+<table>
+	<tr>
+		<td class="highlight_ready_bold">
+			#!string!title_0174!#
+		</td>
+	</tr>
+	<tr>
+		<td>
+<!-- end new-anvil-install-start-network-config -->
+
+<!-- start new-anvil-install-network-config-node2 -->
+		</td>
+	</tr>
+	<tr>
+		<td class="highlight_ready_bold">
+			#!string!title_0175!#
+		</td>
+	</tr>
+	<tr>
+		<td>
+<!-- end new-anvil-install-network-config-node2 -->
+
+
+<!-- start new-anvil-install-end-network-config -->
+		</td>
+	</tr>
+</table>
+<br />
+<table>
+	<tr>
+		<td colspan="3" class="highlight_ready_bold">
+			#!string!title_0176!#
+		</td>
+	</tr>
+<!-- end new-anvil-install-end-network-config -->
