Fixed a bug with mounting ISO images from media library that had spaces in their names. Fixed a typo in a template. Started work on having the 'striker-installer' setup the Striker dashboard as a PXE server for installing other Striker dashboards and Anvil! nodes.
Signed-off-by: Madison Kelly (digimer) <digimer@alteeve.ca>

--- a/html/skins/alteeve/common.html
+++ b/html/skins/alteeve/common.html
@@ -198,6 +198,10 @@
 <span class="disabled_button">#!replace!button_text!#</span>
 <!-- end disabled-button -->
 
+<!-- start disabled-button-with-class -->
+<span class="#!replace!button_class!#">#!replace!button_text!#</span>
+<!-- end disabled-button-with-class -->
+
 <!-- start enabled-button -->
 <a href="#!replace!button_link!#" id="#!replace!id!#" class="#!replace!button_class!#">#!replace!button_text!#</a>
 <!-- end enabled-button -->
