--- a/html/skins/alteeve/server.html
+++ b/html/skins/alteeve/server.html
@@ -2701,8 +2701,8 @@
 
 <!-- start display-server-details-resources -->
 					<tr>
-						<td>
-							<span class="fixed_width">#!replace!say_vm!#</span>
+						<td class="fixed_width">
+							#!replace!say_vm!#
 						</td>
 						<td>
 							#!replace!cpu_count!#
@@ -2710,8 +2710,8 @@
 						<td>
 							#!replace!say_ram!#
 						</td>
-						<td>
-							<span class="fixed_width">#!replace!lv_path!#</span>
+						<td class="fixed_width">
+							#!replace!lv_path!#
 						</td>
 						<td>
 							#!replace!lv_size!#
@@ -2726,7 +2726,7 @@
 <span class="highlight_detail">#!replace!say_host!#</span> -> <span class="highlight_detail">#!replace!bridge!#</span> -> <span class="highlight_detail">#!replace!device!#</span> -> 
 <!-- end display-server-details-entra-nics -->
 
-<!-- start display-server-details-entra-storage -->
+<!-- start display-server-details-extra-storage -->
 					<tr>
 						<td>
 							&nbsp;
@@ -2737,7 +2737,7 @@
 						<td>
 							&nbsp;
 						</td>
-						<td>
+						<td class="fixed_width">
 							#!replace!say_lv_path!#
 						</td>
 						<td>
@@ -2747,7 +2747,7 @@
 							#!replace!say_network!#
 						</td>
 					</tr>
-<!-- end display-server-details-entra-storage -->
+<!-- end display-server-details-extra-storage -->
 
 <!-- start display-server-details-footer -->
 				</table>
