--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Striker</title>
-	<META HTTP-EQUIV="Refresh" CONTENT="0; URL=cgi-bin/an-cdb">
+	<META HTTP-EQUIV="Refresh" CONTENT="0; URL=cgi-bin/striker">
 </head>
 <body>
 	Hi.
