--- a/html/skins/alteeve/install-manifest.html
+++ b/html/skins/alteeve/install-manifest.html
@@ -135,41 +135,20 @@
 	</tr>
 <!-- end new-anvil-install-be-patient-message -->
 
-<!-- start new-anvil-install-start-network-mapping -->
+<!-- start new-anvil-install-start-network-config -->
 </table>
 <br />
 <table>
 	<tr>
 		<td class="highlight_ready_bold">
-			#!string!title_0174!#
+			#!replace!title!#
 		</td>
 	</tr>
 	<tr>
 		<td>
-<!-- end new-anvil-install-start-network-mapping -->
+<!-- end new-anvil-install-start-network-config -->
 
-<!-- start new-anvil-install-network-mapping-node2 -->
+<!-- start new-anvil-install-end-network-config -->
 		</td>
 	</tr>
-	<tr>
-		<td class="highlight_ready_bold">
-			#!string!title_0175!#
-		</td>
-	</tr>
-	<tr>
-		<td>
-<!-- end new-anvil-install-network-mapping-node2 -->
-
-
-<!-- start new-anvil-install-end-network-mapping -->
-		</td>
-	</tr>
-</table>
-<br />
-<table>
-	<tr>
-		<td colspan="3" class="highlight_ready_bold">
-			#!string!title_0176!#
-		</td>
-	</tr>
-<!-- end new-anvil-install-end-network-mapping -->
+<!-- end new-anvil-install-end-network-config -->
